# SmarterVote

./: .dockerignore  .env.example  .example.env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  PIPELINE_MODES.md  README.md  TEST_CLEANUP_SUMMARY.md  analyze_coverage.py  conftest.py  demo_publishing.py  demo_race_metadata_caching.py  demo_race_metadata_enhancements.py  dev-start.ps1  manual_test_metadata_upgrades.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup-dev.ps1  test_code_quality.py  test_end_to_end.py  test_integration.py  test_integration_root.py  test_metadata_improvements.py  test_pipeline_logic.py  test_race_metadata_enhancements.py  test_vector_db.py
.github/: FUNDING.yml  copilot-instructions.md
docs/: architecture.md  auth0-configuration.md  chromadb-implementation-summary.md  deployment-guide.md  enhanced-metadata-service.md  issues-list.md  local-development.md  metadata-improvements-summary.md  race_metadata_caching.md  testing-guide.md  testing.md  week1-milestones.md
infra/: DEPLOYMENT-READY.md  DEPLOYMENT-VALIDATION.md  README.md  bucket.tf  chroma-storage.tf  deploy.ps1  deploy.sh  enqueue-api.tf  main-simplified.tf  main.tf  monitoring.tf  outputs.tf  pipeline-client.tf  pubsub.tf  races-api.tf  run-job.tf  run-service.tf  scheduler.tf  secrets.tf  secrets.tfvars.example  terraform.tfvars  tfplan  validate.sh  variables.tf
pipeline/: Dockerfile  __init__.py  requirements.txt
pipeline_client/: Dockerfile  queue.json  run.py  start.ps1
pipeline_v2/: __init__.py  agent.py  prompts.py
scripts/: batch_trigger.py  deploy.ps1  deploy_enqueue_api.ps1  deploy_pipeline_client.ps1  deploy_races_api.ps1  deploy_races_api.sh  install_shared.py  manage_race_metadata_cache.py  pull_from_gcs.py  push_to_gcs.py  rollback.ps1  rotate-keys.ps1  run_local.py  setup-remote-state.ps1  setup_dev.py  test_bp.py  validate-infra.ps1  validate_project.py
shared/: __init__.py  models.py  pyproject.toml  racejson_utils.py  setup.py  state_constants.py
tests/: __init__.py  conftest.py  test_ai_enrichment.py  test_integration.py  test_metadata_engine_upgrades.py  test_metadata_pipeline_client_local_storage.py  test_pipeline.py  test_pipeline_v2.py  test_race_manager_publish_consistency.py  test_race_metadata_caching_integration.py  test_reference_system.py  test_run_steps.py  test_step_orchestrator.py  (+3 more)
(+378 files in other folders)
