[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartervote"
version = "0.2.0"
description = "SmarterVote AI-powered electoral analysis pipeline"
authors = [{name = "SmarterVote Team"}]
dependencies = [
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-secret-manager>=2.16.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "services*", "shared*"]
exclude = ["web*", "infra*", "data*", "tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = [
    "pipeline",
    "services",
    "web/src",
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --strict-config -v"
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running"
]

[tool.black]
line-length = 127
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | web
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
extend_skip_glob = ["web/*"]
